--- a/portfolio.html
+++ b/portfolio.html
@@ -187,52 +187,73 @@
 
     <footer class="bottom-line">
         <div class="container">
-            <div class="footer">
-                <div class="left-side-footer">
-                    <div class="footer-logo">
-                        <a href="" class="logo bottom-logo">
-                            <span class="logo web">Web</span>Studio
-                        </a>
-                    </div> 
-                    <address>
-                        <span class="address-location">г. Киев, пр-т Леси Украинки, 26</span><br>
-                        <a href="mailto:info@devstudio.com" class="address-contacts">info@devstudio.com</a><br>
-                        <a href="tel:+380961111111" class="address-contacts">+38 096 111 11 11</a>
-                    </address>
-                </div>
-                <div class="right-side-footer">
-                    <span>ПРИСОЕДИНЯЙТЕСЬ</span> 
-                    <ul class="soc-links">
-                        <li>
-                            <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-links-icons">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-links-icons">
-                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        <li>
-                            <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-links-icons">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-links-icons">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>    
-                    </ul>
-                </div>
+          <div class="footer">
+            <div class="left-side-footer">
+              <div class="footer-logo">
+                <a href="" class="logo bottom-logo">
+                  <span class="logo web">Web</span>Studio
+                </a>
+              </div>
+              <address>
+                <span class="address-location"
+                  >г. Киев, пр-т Леси Украинки, 26</span
+                ><br />
+                <a href="mailto:info@devstudio.com" class="address-contacts"
+                  >info@devstudio.com</a
+                ><br />
+                <a href="tel:+380961111111" class="address-contacts"
+                  >+38 096 111 11 11</a
+                >
+              </address>
             </div>
+          <div class="right-side">
+              <div class="right-side-footer">
+                  <span>ПРИСОЕДИНЯЙТЕСЬ</span>
+                  <ul class="soc-links">
+                    <li>
+                      <a href="" class="footer-soc-link">
+                        <svg class="footer-soc-links-icons">
+                          <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" class="footer-soc-link">
+                        <svg class="footer-soc-links-icons">
+                          <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+      
+                    <li>
+                      <a href="" class="footer-soc-link">
+                        <svg class="footer-soc-links-icons">
+                          <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" class="footer-soc-link">
+                        <svg class="footer-soc-links-icons">
+                          <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+              </div>
+              <div class="email-form">
+                  <span>Подпишитесь на рассылку</span> 
+                  <form>
+                      <input type="email" name="mail" placeholder="E-mail">
+                      <button type="submit">Подписаться
+                          <svg width=24 height=24>
+                              <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                          </svg>
+                      </button>
+                  </form>
+              </div>
+            </div>
+          </div>
         </div>
     </footer>
 </body>
