--- a/portfolio.html
+++ b/portfolio.html
@@ -243,7 +243,7 @@
               </div>
               <div class="email-form">
                   <span>Подпишитесь на рассылку</span> 
-                  <form>
+                  <form autocomplete="off">
                       <input type="email" name="mail" placeholder="E-mail">
                       <button type="submit">Подписаться
                           <svg width=24 height=24>
