--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             <h2>Оставьте свои данные, мы вам перезвоним</h2>
             <form autocomplete="off">
                 <div class="field-with-icon">
-                  <label  class="form-field">Имя
+                  <label  class="form-field">
+                  Имя
                     <input type="text" name="user-name" placeholder="" autofocus>
                   </label>
                   <svg class=modal-icon width=13 height=13>
@@ -80,7 +81,8 @@
                 </div>
 
                 <div class="field-with-icon">
-                  <label  class="form-field">Телефон
+                  <label  class="form-field">
+                  Телефон
                     <input type="tel" name="tel" placeholder="">
                   </label>
                   <svg class=modal-icon width=13 height=13>
@@ -89,7 +91,8 @@
                 </div>
 
                 <div class="field-with-icon">
-                  <label  class="form-field">Почта
+                  <label  class="form-field">
+                  Почта
                     <input type="email" name="mail" placeholder="">
                   </label>
                   <svg class=modal-icon width=13 height=13>
@@ -98,14 +101,15 @@
                 </div>
 
                 <div>
-                  <label  class="form-field">Комментарий
+                  <label  class="form-field">
+                  Комментарий
                     <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Введите текст"></textarea> 
                   </label>  
                 </div>
 
-                <div class="policy">
-                  <input type="checkbox" name="policy" id="policy">
-                  <label for="policy"><span class="policy-terms">Соглашаюсь с рассылкой и принимаю </span><a href="" class="policy-link">Условия договора</a></label>
+                <div class="policy-field">
+                  <input type="checkbox" name="policy" id="policy" class="checkbox-policy">
+                  <label for="policy" class="policy-label">Соглашаюсь с рассылкой и принимаю&ensp;<a href="" class="policy-link">Условия договора</a></label>
                 </div>
 
                 <button class="button-submit" type="submit">Отправить</button>
@@ -403,7 +407,7 @@
             </div>
             <address>
               <span class="address-location"
-                >г. Киев, пр-т Леси Украинки, 26</span
+                >г. Киев, пр-т Леси Украинки, 26  </span
               ><br />
               <a href="mailto:info@devstudio.com" class="address-contacts"
                 >info@devstudio.com</a
