Добавила стилизацию форм

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     <footer class="bottom-line">
       <div class="container">
         <div class="footer">
-          <div class="left-side-footer">
+          <div>
             <div class="footer-logo">
               <a href="" class="logo bottom-logo">
                 <span class="logo web">Web</span>Studio
