--- a/index.html
+++ b/index.html
@@ -64,56 +64,81 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button class="button-closed" data-modal-close>
-                <svg width=11 height=11>
-                    <use href="./images/symbol-defs.svg#icon-close-button"></use>
-                </svg>
+              <svg width="11" height="11">
+                <use href="./images/symbol-defs.svg#icon-close-button"></use>
+              </svg>
             </button>
 
             <!--МОДАЛЬНОЕ ОКНО-->
             <h2>Оставьте свои данные, мы вам перезвоним</h2>
             <!--ФОРМА МОДАЛЬНОГО ОКНА-->
             <form autocomplete="off">
-                <div class="form-field">
-                  <label for="user" class="form-field-label">Имя</label>
-                  <div class="form-field-icon">
-                    <input type="text" name="user-name" id="user" placeholder="" autofocus>
-                    <svg class=modal-icon width=13 height=13>
-                      <use href="./images/symbol-defs.svg#icon-modal-icon1"></use>
-                    </svg>
-                  </div>
+              <div class="form-field">
+                <label for="user" class="form-field-label">Имя</label>
+                <div class="form-field-icon">
+                  <input
+                    type="text"
+                    name="user-name"
+                    id="user"
+                    placeholder=""
+                    autofocus
+                  />
+                  <svg class="modal-icon" width="13" height="13">
+                    <use href="./images/symbol-defs.svg#icon-modal-icon1"></use>
+                  </svg>
                 </div>
+              </div>
 
-                <div class="form-field">
-                  <label for="tel" class="form-field-label">Телефон</label>
-                  <div class="form-field-icon">
-                    <input type="tel" name="tel" id="tel" placeholder="">
-                    <svg class=modal-icon width=13 height=13>
-                      <use href="./images/symbol-defs.svg#icon-modal-icon2"></use>
-                    </svg>
-                  </div>
+              <div class="form-field">
+                <label for="tel" class="form-field-label">Телефон</label>
+                <div class="form-field-icon">
+                  <input type="tel" name="tel" id="tel" placeholder="" />
+                  <svg class="modal-icon" width="13" height="13">
+                    <use href="./images/symbol-defs.svg#icon-modal-icon2"></use>
+                  </svg>
                 </div>
+              </div>
 
-                <div class="form-field">
-                  <label for="mail" class="form-field-label">Почта</label>
-                  <div class="form-field-icon">
-                    <input type="email" name="mail" id="mail" placeholder="">
-                    <svg class=modal-icon width=13 height=13>
-                      <use href="./images/symbol-defs.svg#icon-modal-icon3"></use>
-                    </svg>
-                  </div>
+              <div class="form-field">
+                <label for="mail" class="form-field-label">Почта</label>
+                <div class="form-field-icon">
+                  <input type="email" name="mail" id="mail" placeholder="" />
+                  <svg class="modal-icon" width="13" height="13">
+                    <use href="./images/symbol-defs.svg#icon-modal-icon3"></use>
+                  </svg>
                 </div>
-                <!--Комментарии-->
-                <div class="form-field">
-                  <label for="comment" class="form-field-label">Комментарий</label> 
-                  <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Введите текст"></textarea>   
-                </div>
-                <!--Чекбокс-->
-                <div class="checkbox-field">
-                  <input type="checkbox" name="policy" id="policy" class="checkbox-input">
-                  <label for="policy" class="checkbox-label">Соглашаюсь с рассылкой и принимаю&ensp;<a href="" class="policy-link">Условия договора</a></label>
-                </div>
-                <!--Кнопка ОТПРАВИТЬ-->
-                <button class="button-submit" type="submit">Отправить</button>
+              </div>
+              <!--Комментарии-->
+              <div class="form-field">
+                <label for="comment" class="form-field-label"
+                  >Комментарий</label
+                >
+                <textarea
+                  name="comment"
+                  id="comment"
+                  cols="30"
+                  rows="10"
+                  placeholder="Введите текст"
+                ></textarea>
+              </div>
+              <!--Чекбокс-->
+              <div class="checkbox-field">
+                <input
+                  type="checkbox"
+                  name="policy"
+                  id="policy"
+                  class="checkbox-input"
+                />
+                <label for="policy" class="checkbox-label"
+                  >Соглашаюсь с рассылкой и принимаю&ensp;<a
+                    href=""
+                    class="policy-link"
+                    >Условия договора</a
+                  ></label
+                >
+              </div>
+              <!--Кнопка ОТПРАВИТЬ-->
+              <button class="button-submit" type="submit">Отправить</button>
             </form>
           </div>
         </div>
@@ -408,7 +433,7 @@
             </div>
             <address>
               <span class="address-location"
-                >г. Киев, пр-т Леси Украинки, 26  </span
+                >г. Киев, пр-т Леси Украинки, 26 </span
               ><br />
               <a href="mailto:info@devstudio.com" class="address-contacts"
                 >info@devstudio.com</a
@@ -418,51 +443,52 @@
               >
             </address>
           </div>
-        <div class="right-side">
+          <div class="right-side">
             <div class="right-side-footer">
-                <span>ПРИСОЕДИНЯЙТЕСЬ</span>
-                <ul class="soc-links">
-                  <li>
-                    <a href="" class="footer-soc-link">
-                      <svg class="footer-soc-links-icons">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="" class="footer-soc-link">
-                      <svg class="footer-soc-links-icons">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-    
-                  <li>
-                    <a href="" class="footer-soc-link">
-                      <svg class="footer-soc-links-icons">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="" class="footer-soc-link">
-                      <svg class="footer-soc-links-icons">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+              <span>ПРИСОЕДИНЯЙТЕСЬ</span>
+              <ul class="soc-links">
+                <li>
+                  <a href="" class="footer-soc-link">
+                    <svg class="footer-soc-links-icons">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="footer-soc-link">
+                    <svg class="footer-soc-links-icons">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="" class="footer-soc-link">
+                    <svg class="footer-soc-links-icons">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="footer-soc-link">
+                    <svg class="footer-soc-links-icons">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
             <div class="email-form">
-                <span>Подпишитесь на рассылку</span> 
-                <form autocomplete="off">
-                    <input type="email" name="mail" placeholder="E-mail">
-                    <button type="submit">Подписаться
-                        <svg width=24 height=24>
-                            <use href="./images/symbol-defs.svg#icon-icon-send"></use>
-                        </svg>
-                    </button>
-                </form>
+              <span>Подпишитесь на рассылку</span>
+              <form autocomplete="off">
+                <input type="email" name="mail" placeholder="E-mail" />
+                <button type="submit">
+                  Подписаться
+                  <svg width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                  </svg>
+                </button>
+              </form>
             </div>
           </div>
         </div>
